--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-  "name": "uber-stats",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "biome lint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@radix-ui/react-slot": "^1.1.1",
-    "@tanstack/query-sync-storage-persister": "^5.66.0",
-    "@tanstack/react-query": "^5.66.0",
-    "@tanstack/react-query-persist-client": "^5.66.0",
-    "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.474.0",
-    "papaparse": "^5.5.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router": "^7.1.5",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/node": "^22.13.0",
-    "@types/papaparse": "^5.3.15",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.20",
-    "globals": "^15.14.0",
-    "postcss": "^8.5.1",
-    "tailwindcss": "3",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.5"
-  }
+	"name": "uber-stats",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"format": "biome format . --write",
+		"lint": "biome lint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@radix-ui/react-slot": "^1.1.1",
+		"@tanstack/query-sync-storage-persister": "^5.66.0",
+		"@tanstack/react-query": "^5.66.0",
+		"@tanstack/react-query-persist-client": "^5.66.0",
+		"axios": "^1.7.9",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.474.0",
+		"papaparse": "^5.5.2",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-router": "^7.1.5",
+		"tailwind-merge": "^3.0.1",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@types/node": "^22.13.0",
+		"@types/papaparse": "^5.3.15",
+		"@types/react": "^18.3.18",
+		"@types/react-dom": "^18.3.5",
+		"@vitejs/plugin-react-swc": "^3.5.0",
+		"autoprefixer": "^10.4.20",
+		"globals": "^15.14.0",
+		"postcss": "^8.5.1",
+		"tailwindcss": "3",
+		"typescript": "~5.6.2",
+		"vite": "^6.0.5"
+	}
 }
