feat: added toast packages and Toaster to the page

--- a/components.json
+++ b/components.json
@@ -13,7 +13,7 @@
 	"aliases": {
 		"components": "@/view/components",
 		"utils": "@/app/utils/cn",
-		"hooks": "@/hooks",
+		"hooks": "@/view/hooks",
 		"lib": "@/lib",
 		"ui": "@/view/components"
 	},
