--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-toast": "^1.2.5",
 		"@tanstack/query-sync-storage-persister": "^5.66.0",
 		"@tanstack/react-query": "^5.66.0",
 		"@tanstack/react-query-persist-client": "^5.66.0",
