--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-toast": "^1.2.5",
+		"@radix-ui/react-tooltip": "^1.1.7",
 		"@tanstack/query-sync-storage-persister": "^5.66.0",
 		"@tanstack/react-query": "^5.66.0",
 		"@tanstack/react-query-persist-client": "^5.66.0",
